cc_library(
    name = "win_lib",
    includes = ["src"],
    srcs = glob(["src/**/*.c"]),
    hdrs = glob(["src/**/*.h"]),
    deps = [
        "//vendor:win_deps",
    ],
)

cc_library(
    name = "lin_lib",
    includes = ["src"],
    srcs = glob(["src/**/*.c"]),
    hdrs = glob(["src/**/*.h"]),
	deps = [
		"//vendor:lin_deps",
	],
	linkopts = [
		"-pthread",
		"-lpcap",
	],
)

cc_binary(
    name = "windows_binary",
    srcs = ["src/main.c"],
    deps = [
        ":win_lib"
    ],
)

cc_binary(
	name = "linux_binary",
	srcs = ["src/main.c"],
	deps = [
		":lin_lib",
	],
)
